--- a/package.json
+++ b/package.json
@@ -53,6 +53,6 @@
     "pg": "^4.4.3"
   },
   "bundleDependencies": [],
-  "private": true,
-  "main": "server.js"
+  "private": true
+  // "main": "server.js"
 }
