--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "type": "git",
     "url": "https://github.com/openshift/origin-server"
   },
-
   "engines": {
     "node": ">= 0.6.0",
     "npm": ">= 1.0.0"
@@ -50,9 +49,12 @@
     "body-parser": "^1.14.2",
     "bower": "^1.7.2",
     "express": "^4.13.3",
-    "pg": "^4.4.3"
+    "mailgun-js": "^0.7.7",
+    "pg": "^4.4.3",
+    "request": "^2.69.0",
+    "shortid": "^2.2.4"
   },
   "bundleDependencies": [],
-  "private": true, 
+  "private": true,
   "main": "app.js"
 }
